--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="./logo192.png" />
     <link rel="manifest" href="./manifest.json" />
-    <title>Sophon Foundation</title>
+    <title>S O P H O N</title>
     <link href="./static/css/2.14c3a675.chunk.css" rel="stylesheet" />
-    <link href="./static/css/main.0c4b5d23.chunk.css" rel="stylesheet" />
+    <link href="./static/css/main.846adcb1.chunk.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -96,7 +96,7 @@
         t();
       })([]);
     </script>
-    <script src="./static/js/2.91573c56.chunk.js"></script>
-    <script src="./static/js/main.dd47a2ba.chunk.js"></script>
+    <script src="./static/js/2.cf39a421.chunk.js"></script>
+    <script src="./static/js/main.6b5f1619.chunk.js"></script>
   </body>
 </html>
